Bug 94506 - Fix a memory leak of PolkitAgentListener's Server object
Summary: Fix a memory leak of PolkitAgentListener's Server object
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
: 85506 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-12 02:41 UTC by Miloslav Trmac
Modified: 2017-02-09 19:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Duh. (764 bytes, patch)
2016-03-12 02:41 UTC, Miloslav Trmac
Details | Splinter Review

Description Miloslav Trmac 2016-03-12 02:41:22 UTC

    
Comment 1 Miloslav Trmac 2016-03-12 02:41:55 UTC
Created attachment 122246 [details] [review]
Duh.
Comment 2 Colin Walters 2016-03-14 22:22:27 UTC
Comment on attachment 122246 [details] [review]
Duh.

Review of attachment 122246 [details] [review]:
-----------------------------------------------------------------

Looks correct.
Comment 4 Miloslav Trmac 2017-02-09 19:25:54 UTC
*** Bug 85506 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.