Fix a memory leak of PolkitAgentListener's Server object

https://bugs.freedesktop.org/show_bug.cgi?id=94506